--- a/styles/main.css
+++ b/styles/main.css
@@ -8,22 +8,15 @@ html, body {
 	
 }
 
-body,
-section {
-  
-  background-image: url(./img/bg.png);
-  
-}
-
 body > section:nth-of-type(odd) {
 
-	background-color: #fafafa;
+	background-color: rgb(200,200,200);
 
 }
 
 body > section:nth-of-type(even) {
 
-	background-color: #fff;
+	background-color: rgb(225,225,225);
 
 }
 
@@ -191,7 +184,7 @@ h3 {
 
 header {
   
-  box-shadow: inset 1px 4px 9px -6px;
+  box-shadow: inset 0 50px 50px -6px #eee;
   padding: 0;
   margin: 0;
   
@@ -375,50 +368,6 @@ header {
   
 }
 
-
-/*****************************************
-       ~~~~~  Profile Styles  ~~~~~
-*****************************************/
-
-.profile {
-
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-
-} 
-
-.profile-text {
-	
-	padding: 0 0 25px 0;
-  margin: 0 5% 25px 5%;
-  text-align: center;
-  justify-content: center;
-  align-self: center;
-}
-
-.profile-pic {
-  
-  max-height: 225px;
-  max-width: 367px;
-  width: 100%;
-  justify-content: center;
-  align-self: center;
-  padding: 25px 0 50px;
-  
-}
-
-.profile-pic img {
-  
-  width: 100%;
-  height: auto;
-  justify-content: center;
-  align-self: center;
-  box-shadow: 0 5px 10px #aaa;
-  
-}
-
 /*****************************************
       ~~~~~  Section Styles  ~~~~~
 *****************************************/
@@ -427,7 +376,8 @@ section {
 	
   margin: 0 auto;
   padding: 0;
-  box-shadow: inset 1px 4px 9px -6px;
+  box-shadow: inset 0 -50px 50px -6px #eee;
+  max-width: 1280px;
 	
 }
 
@@ -456,9 +406,10 @@ section p {
 
 footer {
     
-  box-shadow: inset 1px 4px 9px -6px;
+  box-shadow: inset 0 10px 9px -9px #333;
   margin: 0 auto;
   padding: 0;
+  max-width: 1280px;
     
 }
 
@@ -737,12 +688,19 @@ footer {
 
 	/* Nav */
   
+  .header-container {
+    
+    width: 100%;
+    
+  }
+  
   .nav-container {
     
     display: flex;
     flex-flow: row;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
     
   }
   
@@ -750,7 +708,7 @@ footer {
     
     display: flex;
     flex-direction: row;
-    margin: 0 0.9em 0 0;
+    margin: 0 0.9em 0;
     
     
   }
