--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,17 @@
+body {
+	
+	position: relative;
+	
+}
+
+h1 {
+  
+  font-weight: 500;
+  padding: 0.25em;
+  margin: 0;
+  
+}
+
 /******
  HEADER
 *******/
@@ -6,20 +20,14 @@ header {
   
   position: fixed;
   box-sizing: border-box;
-  top: 0;
+  top: 60px;
   width: 100%;
-  height: 75px;
+  height: 40px;
   margin: 0;
   padding: 0 10px;
   background-color: slategray;
-  
-}
-
-header h1 {
-  
-  color: white;
-  font-weight: 500;
-  text-align: right;
+  z-index: 2;
+  box-shadow: 0 5px 0 2px #ddd;
   
 }
 
@@ -30,13 +38,30 @@ nav {
   border-right: thin solid white;
   left: 0;
   bottom: 0;
-  height: calc(100% - 75px);
+  height: calc(100% - 100px);
   width: 200px;
   margin: 0;
   padding: 0;
   background-color: aliceblue;
+  z-index: 1;
   overflow: auto;
+  box-shadow: 5px 0 0 2px #ddd;
   
+}
+
+nav input {
+	
+	margin: 1em;
+	border-radius: 10px;
+	
+}
+
+nav input:focus{
+	
+	outline: none;
+  border-color: #ddd;
+	box-shadow: 0 0 10px #ddd;
+	
 }
 
 nav a {
@@ -52,6 +77,7 @@ nav a {
   align-items: center;
   text-transform: capitalize;
   text-decoration: none;
+  color: black;
   
 }
 
@@ -61,15 +87,53 @@ nav a:hover {
   
 }
 
+nav a:active {
+  
+  border-left: 5px solid green;
+  
+}
+
 .app-container {
   
   position: fixed;
   box-sizing: border-box;
   width: calc(100% - 200px);
-  height: calc(100% - 75px);
+  height: calc(100% - 140px);
   margin: 0;
-  background-color: azure;
+  padding: 0;
+  background-color: white;
   right: 0;
+  top: 100px;
+  z-index: 1;
+  overflow: auto;
+  flex-flow: row wrap;
+	justify-content: space-around;
+	display: flex;
+  
+}
+
+.card {
+	
+	display: flex;
+	width: 20%;
+	height: calc(20vw / 1.6);
+	border: thin solid #ddd;
+	padding: 1em;
+	margin: 20px 10px;
+	
+}
+
+footer {
+  
+  position: fixed;
+  box-sizing: border-box;
   bottom: 0;
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  padding: 0 10px;
+  background-color: slategray;
+  z-index: 2;
+  box-shadow: 0 -5px 0 2px #ddd;
   
 }
