Search bar, sticky headers, navigation
Added formatting to search bar, added navigation to sticky, formatted
buttons

--- a/styles/main.css
+++ b/styles/main.css
@@ -44,22 +44,23 @@ header {
 }
 
 
-.sticky-navbar {
+.sticky-nav {
   
   position: fixed;
   top: 0px;
-  width: 100%;
-  height: 80px;
-  margin: 0 auto;
-  padding: 0;
-  background-color: #ddd;
   z-index: 9999;
-  display: none;
   
 }
 
-.searchbar input,
-.sticky-navbar input {
+.sticky-search {
+  
+  position: fixed;
+  top: 75px;
+  z-index: 9999;
+  
+}
+
+.searchbar input {
 	
   position: absolute;
   margin: 0 auto;
@@ -72,6 +73,8 @@ header {
   margin: 5px 0;
   outline: none;
   border-style: none;
+  text-align: center;
+  color: #ddd;
 	
 }
 
@@ -79,6 +82,7 @@ input:focus{
 	
   outline: none;
   border-style: none;
+  color: #000;
 	
 }
 
@@ -94,8 +98,9 @@ nav {
   padding: 0;
   background-color: aliceblue;
   z-index: 1;
-  box-shadow: 5px 0 0 2px #ddd;
+  border-bottom: thin solid rgba(100,100,100,0.5);
   justify-content: flex-end;
+  align-items: center;
   
   
 }
@@ -104,21 +109,28 @@ nav a {
   
   display: flex;
   box-sizing: border-box;
-  width: 75px;
-  height: 75px;
-  margin: 0;
-  padding: 0;
+  padding: 5px;
+  margin: 0.5em;
   border: thin solid black;
   align-items: center;
   text-decoration: none;
+  text-transform: uppercase;
+  color: black;
   
+}
+
+nav a:hover {
+	
+	color: #fff;
+	
 }
 
 .app-container {
   
   box-sizing: border-box;
   width: 100%;
-  margin: 0;
+  max-width: 1366px;
+  margin: 0 auto;
   padding: 0 0 80px;
   background-color: white;
   z-index: 1;
@@ -131,8 +143,8 @@ nav a {
 .card {
 	
 	display: flex;
-	width: 200px;
-	height: 100px;
+	width: 30%;
+	padding-bottom: 25%;
 	border: thin solid #ddd;
 	margin: 1em;
 	
@@ -147,8 +159,7 @@ footer {
   height: 40px;
   margin: 0;
   padding: 0 10px;
-  background-color: slategray;
+  background-color: #ddd;
   z-index: 2;
-  box-shadow: 0 -5px 0 2px #ddd, inset 0 25px 50px -25px #fff;
   
 }
