--- a/styles/main.css
+++ b/styles/main.css
@@ -26,9 +26,62 @@ header {
   width: 100%;
   background-image: url(http://www.diningwithcompany.com/wp-content/uploads/2014/07/o-DINING-OUT-facebook.jpg);
   background-size: contain;
-  margin: 0 0 1em;
+  margin: 0;
   padding: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
+}
+
+header h1 {
+  
+  text-transform: uppercase;
+  font-size: 4em;
+  color: white;
+  padding: 0;
+  margin: 0;
+  text-shadow: 0 6px 10px rgba(0,0,0,0.5);
+  
+}
+
+header p {
+  
+  color: white;
+  padding: 0;
+  margin: 25px;
+  font-size: 1.5em;
+  text-shadow: 0 6px 10px rgba(0,0,0,0.5);
+  
+}
+
+header a {
+  
+  box-sizing: border-box;
+  padding: 1em;
+  margin: 0.5em;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  background-color: rgba(0,0,0,0.6);
+  border-radius: 5px;
+  
+}
+
+header a:hover {
+  
+  background-color: rgba(255,255,255,0.7);
+  color: black;
+  
+}
+
+header a:active {
+  
+  box-shadow: inset 0 0 2px 2px #ddd;
+  background-color: #eee;
+  
 }
 
 .searchbar {
@@ -114,18 +167,21 @@ nav ul {
 nav a {
   
   display: flex;
-  box-sizing: border-box;
   padding: 5px;
   margin: 0.5em;
-  align-items: center;
-  text-decoration: none;
-  color: white;
+  border-radius: 0;
   
 }
 
 nav a:hover {
 	
-	background-color: #fff;
+  background-color: rgba(255,255,255,0.5);
+	
+}
+
+nav a:active {
+	
+  color: black;
 	
 }
 
